--- a/references.bib
+++ b/references.bib
@@ -3270,6 +3270,24 @@
 	url = {https://www.who.int/standards/classifications/classification-of-diseases}
 }
 
+@book{who2022,
+  title={World mental health report: Transforming mental health for all},
+  author={World Health Organization},
+  year={2022},
+  publisher={World Health Organization}
+}
+
+@article{patel2018,
+  title={The Lancet Commission on global mental health and sustainable development},
+  author={Patel, Vikram and Saxena, Shekhar and Lund, Crick and Thornicroft, Graham and Baingana, Florence and Bolton, Paul and Chisholm, Dan and Collins, Pamela Y and Cooper, Janice L and Eaton, Julian and others},
+  journal={The lancet},
+  volume={392},
+  number={10157},
+  pages={1553--1598},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @misc{soukupova2023,
 	author = {Soukupová, J and Melicharová, H and Šanca, O and Bartůněk, V and Jarkovský, J and Komenda, M},
 	title = {{Dlouhodob{\ifmmode\acute{a}\else\'{a}\fi} psychiatrick{\ifmmode\acute{a}\else\'{a}\fi} p{\ifmmode\acute{e}\else\'{e}\fi}{\ifmmode\check{c}\else\v{c}\fi}e}},
