--- a/example.Rmd
+++ b/example.Rmd
@@ -11,7 +11,7 @@ editor_options:
 
 # Applied example
 
-> Please note that the data set used in this section is fairly large (~70,000 rows) and so the figures below might take some time to load.
+> Please note that the data set used in this section is fairly large (~70,000 rows) and so the figures below take some time to load.
 
 This section demonstrates the workflow and features of `plotscaper` using a large real-world dataset focused on a pressing global issue: mental health.
 
@@ -140,4 +140,58 @@ schema |>
 knitr::opts_chunk$set(eval = TRUE)
 ```
 
+(this can also be done making a selection region by clicking-and-dragging and pressing the `Z` key)
 
+#### Child and adolescent rates
+
+Child and adolescent mental health is a particularly important aspect of the global mental health decline. Childhood mental health disorders are particularly concerning since they can happen during critical developmental periods, leading to life-long consequences [see e.g. @keeley2021]. Furthermore, compared to adults, children have less agency in addressing mental health challenges, relying heavily on primary caregivers and schools.
+
+Thankfully, the overall proportion of children and adolescents in the data set was fairly low, amounting to <9% of all cases and <6% of the total number of days spent in treatment:
+
+```{r}
+aggregate(cbind(cases, days) ~ care_category, sum, data = df) |>
+  lapply(function(x) { if (is.numeric(x)) return(x / sum(x)) else x }) |>
+  data.frame()
+```
+
+However, we may be interested in investigating how the proportion of child and adolescent patients has evolved over time. To do this, we can use the following figure:
+
+```{r}
+
+layout <- matrix(c( # Create a figure layout with two small plots in the left
+  1, 3,             # column, and one tall plot in the right column
+  2, 3
+), nrow = 2, byrow = TRUE)
+
+df |>
+  create_schema() |>
+  add_barplot(c("year", "cases")) |>
+  add_barplot(c("year", "days")) |>
+  add_barplot(c("care_category", "cases")) |>
+  set_layout(layout) |>
+  render() 
+```
+
+To answer the question of how the proportion of child and adolescent patients has evolved over time, we will need to use a bit more complex interactive workflow than we have encountered so far. Specifically:
+
+1. Mark the cases corresponding to children and adolescents by clicking on the corresponding bar in the right barplot, while holding the `1` key
+2. Normalize the two leftmost barplots, corresponding to the number of cases and the total number of days in treatment by year, by clicking on the plots and pressing the `N` key
+3. Zoom into the regions of the two barplots containing the green cases by clicking-and-dragging to select the corresponding region and pressing the `Z` keys.
+
+You should see something similar to this:
+
+```{r}
+#| echo: false
+df |>
+  create_schema() |>
+  add_barplot(c("year", "cases")) |>
+  add_barplot(c("year", "days")) |>
+  add_barplot(c("care_category", "cases")) |>
+  assign_cases(which(df$care_category == "child")) |>
+  plotscaper::normalize("barplot1") |>
+  plotscaper::normalize("barplot2") |>
+  zoom("barplot1", c(0, 0, 1, 0.15)) |>
+  zoom("barplot2", c(0, 0, 1, 0.15)) |>
+  set_layout(layout) |>
+  render() 
+```
