--- a/references.bib
+++ b/references.bib
@@ -421,6 +421,15 @@
   publisher={Springer Science \& Business Media}
 }
 
+@inbook{unwin2008,
+  title={Exploratory graphics of a financial dataset},
+  booktitle={Handbook of data visualization},
+  author={Unwin, Antony and Theus, Martin and H{\"a}rdle, Wolfgang},
+  year={2008},
+  pages={832-852},
+  publisher={Springer Science \& Business Media}
+}
+
 @inbook{wills2008,
   title={Linked Data Views},
   booktitle={Handbook of data visualization},
@@ -3328,3 +3337,26 @@
   year={2021},
   publisher={ERIC}
 }
+
+@article{pina2024,
+  title={Data privacy and ethical considerations in database management},
+  author={Pina, Eduardo and Ramos, Jos{\'e} and Jorge, Henrique and V{\'a}z, Paulo and Silva, Jos{\'e} and Wanzeller, Cristina and Abbasi, Maryam and Martins, Pedro},
+  journal={Journal of Cybersecurity and Privacy},
+  volume={4},
+  number={3},
+  pages={494--517},
+  year={2024},
+  publisher={MDPI}
+}
+
+@article{muller2005,
+  title={Memory and attention in obsessive--compulsive disorder: a review},
+  author={Muller, Jeffrey and Roberts, John E},
+  journal={Journal of anxiety disorders},
+  volume={19},
+  number={1},
+  pages={1--28},
+  year={2005},
+  publisher={Elsevier}
+}
+
