--- a/example.Rmd
+++ b/example.Rmd
@@ -6,14 +6,14 @@ editor_options:
 
 ```{r}
 #| echo: false
-# knitr::opts_chunk$set(eval = FALSE)
+knitr::opts_chunk$set(eval = FALSE)
 ```
 
 # Applied example
 
 > Please note that the data set used in this section is fairly large (~70,000 rows) and so the figures below take some time to load.
 
-This section demonstrates the workflow and features of `plotscaper` using a large real-world dataset focused on a pressing global issue: mental health.
+This section demonstrates a typical interactive workflow with `plotscaper`. The goal is to showcase the package's key features and capabilities by exploring a large, real-world data set, pertaining to a pressing issue: mental health.
 
 Mental health is a global concern. In developed nations, mental health disorders are primary contributor to years lived with disability, significantly impacting both the well-being of individuals and the economic productivity of entire countries [@who2022]. This issue, however, extends beyond developed nations. The global burden of mental health disorders has been steadily rising over the recent decades, a trend which is particularly concerning in low-income countries where access to mental health services is even more limited [@patel2018].
 
@@ -21,7 +21,7 @@ Having had personal experience with friends and relatives impacted by mental hea
 
 ### About the data set
 
-The Institute of Health Information and Statistics of the Czech Republic (IHIS, ÚZIS in Czech) is a government agency established by the Czech Ministry of Health. Its primary roles is to collect, process, and report on medical data within the country of Czechia [@uzis2024]. Of interest, the institute provides high-quality, open-access medical data, including information about the use and manufacture of medicines, summaries of fiscal and employment records in medical facilities, and various epidemiological data sets.
+The [Institute of Health Information and Statistics of the Czech Republic](https://www.uzis.cz/index-en.php) (IHIS, ÚZIS in Czech) is a government agency established by the Czech Ministry of Health. Its primary responsibility is the collection, processing, and reporting of medical data within the country of Czechia [@uzis2024]. Of interest, the institute provides high-quality, open-access medical data, including information about the use and manufacture of pharmaceutics, fiscal and employment records from healthcare facilities, and various epidemiological data sets.
 
 The Long-term care data set [@soukupova2023] contains longitudinal information about long-term psychiatric care in Czechia. More specifically, it contains aggregated data on individuals released from psychiatric care facilities between 2010 and 2022. It includes information such the region of the treatment facility, the sex of the patients, age category, diagnosis based on the international ICD-10 classification [@icd2024a; @icd2024b], the number of hospitalizations, and the total number of days spent in care by the given subset of patients. 
 
@@ -32,9 +32,9 @@ df <- read.csv("./data/longterm_care.csv")
 dplyr::glimpse(df)
 ```
 
-The data contains over 68,000 rows, totaling over 410,000 hospitalizations. Each row records the number patients with a particular set of of characteristics released from a treatment facility during a given year, and the number of days the patients spent in treatment in total.
+The data contains over 68,000 rows, totaling over 410,000 individual-patient hospitalizations. Each row records the number patients with a particular set of of characteristics released from a treatment facility during a given year, and the number of days the patients spent in treatment in total.
 
-The original dataset used Czech column names and category labels. To make the analysis more easily accessible to non-Czech speakers, I took the liberty of translating most of these to English (excluding the `region` variable). The translation script is available in the [thesis repository](https://github.com/bartonicek/thesis), at the following path: `./data/longterm_care_translate.R`. Additionally, the [data set website](https://www.nzip.cz/data/2060-dlouhodoba-psychiatricka-pece) contains a JSON schema with a text description of each of the variables [@soukupova2023]. I took the liberty of translating these descriptions as well, and provide them below, in table Table \@ref(tab:longterm-care-schema):
+In the original version of the data set, the column names as well as the labels of the categorical variables are in Czech. To make the analysis more easily accessible to non-Czech speakers, I took the liberty of translating most of these to English (excluding the `region` variable). The translation script is available in the [thesis repository](https://github.com/bartonicek/thesis/blob/master/longterm_care_translate.R). Additionally, the [data set website](https://www.nzip.cz/data/2060-dlouhodoba-psychiatricka-pece) contains a JSON schema with a text description of each of the variables [@soukupova2023]. I translated these descriptions as well and provide them below, in Table \@ref(tab:longterm-care-schema):
 
 ```{r longterm-care-schema}
 #| echo: false
@@ -44,86 +44,92 @@ knitr::kable(schema,
              caption = "Schema of the long-term care data set, including the original column names (Czech), as well as translated names and descriptions.")
 ```
 
-### Interactive exploration
-
-Let's jump into exploring the data.
-
-#### The relationship between cases and days
-
-The first to note about the data set is that the data has been aggregated, such that each row represents the combined number of releases within a given subset of patients. For example, the first row indicates that, in the year 2019, 13 women aged 40-49 were released from treatment facilities in Olomoucký kraj (region), after receiving short-term care for F10 ICD-10 diagnosis [mental and behavioural disorders due to alcohol use, @icd2024a] for a sum total of 196 days:
+Before we go on to explore the data set with interactive figures, there are a couple of things to note about the data set. The first is that the data has been pre-aggregated, such that each row represents the combined number of releases within a given subgroup of patients. For example, the first row indicates that, in the year 2019, 13 women aged 40-49 were released from treatment facilities in Olomoucký kraj (region), after receiving short-term care for F10 ICD-10 diagnosis [mental and behavioural disorders due to alcohol use, @icd2024a] for a sum total of 196 days:
 
 ```{r}
 df[1, ]
 ```
 
-Thus, the two primary continuous variables of interest are `cases` (the number of patients in a given subgroup released from care) and `days` (the total number of days the given subgroup of patients spent in care). Intuitively, we should expect a fairly linear relationship between these variables, such that a larger group of patients should spend a greater number of days in care, in total. We can use `plotscaper` to visualize this relationship via a scatterplot:
+The reason for this aggregation is likely to anonymize the data and reduce the risk of identifying individual patients [see e.g. @pina2024]. However, when creating visualizations, we need to take the fact that each row represents a group of patients into account. For instance, when drawing a barplot, simply plotting row counts would not be appropriate, since that would ignore the size of the patient groups. Instead, to represent the data properly, we should aggregate (sum) either `cases` or `days`, depending on the question of interest. The same applies to all other aggregation plots, such as histograms [i.e. weighted histograms, see e.g. @unwin2008] and fluctuation diagrams.
+
+Fortunately, as we will see, `plotscaper` makes it easy to create these weighted types visualizations. And further, while the information this aggregated data provides inherently less granular information than patient-level records, we will see that it still preserves a large amount of structure.
+
+### Interactive exploration
+
+#### The relationship between cases and days
+
+We start by exploring the relationship between the two primary continuous variables of interest: `cases` (the number of patients in a given subgroup released from care) and `days` (the total number of days the given subgroup of patients spent in care). Intuitively, we would expect a positive, linear relationship between these variables, such that a larger patient groups should spend more days in care. We can use `plotscaper` to visualize this relationship via a scatterplot:
 
 ```{r}
 #| fig-cap: "Relationship between the number of cases in a given patient subgroup and the total number of days they spent in care."
 library(plotscaper) # Load in the package
 
-create_schema(df) |> # Create a schema that can be modified declaratively
-  add_scatterplot(c("cases", "days")) |>
-  render() # Render the figure
+df |>
+  create_schema() |> # Create a declarative schema for the figure
+  add_scatterplot(c("cases", "days")) |> # Add a scatterplot
+  render() # Render the schema into an interactive figure
 ```
 
-Interestingly, the data does not exhibit a simple linear relationship. Instead, there seems to be a leaf-shaped pattern, with three distinct, roughly linear "leaflets", suggesting a pooling effect. Closer inspection of the data reveals that the `stay_category` variable has three levels, corresponding to short-term (< 3 months), medium-term (3-6 months), and long-term (6+ months) care. Color-coding the cases by these categories indeed confirms that these correspond to the three observed leaflets:
+Interestingly, the pattern that the points show is not a simple linear trend. Instead, the points seem to cluster in three distinct "leaflets", each exhibiting a roughly linear trend. This suggests the presence of a pooling effect, such that the overall trend is the result of combining three distinct groups. Closer inspection of the data reveals that the `stay_category` variable has three levels: short-term (< 3 months), medium-term (3-6 months), and long-term (6+ months) care. Color-coding the cases indeed confirms that the three levels of `stay_category` correspond to the leaflets:
 
 ```{r}
 #| fig-cap: "The data exhibits a pooling effect: while patient groups within each care duration category (short-term, medium-term, and long-term) individually show a linear relationship, this does not hold when the groups are considered together."
 df |>
   create_schema() |>
   add_scatterplot(c("cases", "days")) |>
-  add_barplot(c("stay_category", "cases")) |> # y-axis isn't just count but weighted by cases
-  assign_cases(which(df$stay_category == "short-term"), 1) |> # Mark short-term cases green
-  assign_cases(which(df$stay_category == "long-term"), 2) |> # Mark long-term cases red
+  add_barplot(c("stay_category", "cases")) |> # y-axis is weighted by cases
+  assign_cases(which(df$stay_category == "short-term"), 1) |> # Mark short-term green
+  assign_cases(which(df$stay_category == "long-term"), 2) |> # Mark long-term red
   render()
 ```
 
-Try clicking on the bars in the barplot to confirm there is a fairly minimal overlap between the data points in the three categories.
+> Try clicking on the bars in the barplot to confirm there is a fairly minimal overlap between the data points in the three categories. To remove all selection, double-click the figure.
 
-However, the pooling effect does not fully explain the absence of points between the three leaflets. If the distribution of cases and days within each of the three `stay_category` levels were uniform, we should expect to see more points within the gaps. This suggests a potential selection process, where patients are less likely to be discharged at durations near the category boundaries. We can confirm this by plotting the average number of days a group of patients spent in care:
+However, the pooling effect does not itself explain the absence of points between the three leaflets. If the distribution of cases and days within each of the three `stay_category` levels were uniform, we should expect to see more points within the gaps between the leaflets. This additionally suggests a potential selection process, where patients are less likely to be discharged at durations near the category boundaries. We can confirm this by plotting the average number of days a group of patients spent in care:
 
 ```{r}
 
-df$avg_days <- df$days / df$cases
-
-df |>
+# Compute the average number of days spent in treatment
+df$avg_days <- df$days / df$cases 
+  
+df |> 
   create_schema() |>
   add_scatterplot(c("cases", "avg_days")) |>
   add_barplot(c("stay_category", "cases")) |>
   assign_cases(which(df$stay_category == "short-term"), 1) |>
   assign_cases(which(df$stay_category == "long-term"), 2) |>
-  set_scale("scatterplot1", "y", transformation = "log10", default = TRUE) |>
+  set_scale("scatterplot1", "y", # Log-transform the scatterplot's y-axis
+            transformation = "log10", default = TRUE) |>
   render()
 ```
 
-Now we can clearly see the gaps between the three different distributions along the y-axis.
+Now we can clearly see the gaps between the three different distributions along the y-axis. 
 
-Try querying the points near the gaps by pressing the `Q` key and hovering over them. You will observe that these gaps roughly span the 60-90 day and 150-210 day ranges, corresponding to 2-3 months and 5-7 months, respectively. This is a strong indication of a selection process is at work. Specifically, it seems that patients staying for more than two months are likely to be transitioned to medium-term care and kept around for longer, while those staying for more than five months are similarly likely to be moved to long-term care. There are likely mundane administrative or health-care provider reasons for this, however, it is still an interesting pattern. 
+> Try querying the points near the gaps by pressing the `Q` key and hovering over them. You should observe that the gaps roughly span the 60-90 day and 150-210 day ranges, corresponding to 2-3 months and 5-7 months, respectively. 
+
+The trend we see in the scatterplot above strong indication of a selection process is at work. Specifically, it seems that patients who stay in treatment for more than two months are likely to be transferred to medium-term care and kept around for longer, and, likewise, those who stay in treatment for more than five months are likely to be moved to long-term care. There are likely administrative of health-insurance related reasons for this trend, nevertheless, it is still an interesting pattern to take note of.
 
 #### Number of cases over time
 
-An important question to answer is how has the number of patients and the number of days they spent in care changed over time. We can investigate this by plotting the same scatterplot as we did in the section above, as well as two barplots showing the total number of cases and days within each year. We can also include a histogram of the number of days, for good measure:
+A key question is how have the numbers of patients in treatment evolved over time. We can investigate this by plotting the same scatterplot as we did in the section above, as well as two barplots showing the total number of cases and the total number days in treatment, within each year. We can also include a histogram of the number of days, for a good measure:
 
 ```{r}
-
 schema <- df |>
   create_schema() |>
   add_scatterplot(c("cases", "days")) |>
   add_barplot(c("year", "cases")) |>
   add_barplot(c("year", "days")) |>
-  add_histogram(c("days")) |>
+  add_histogram(c("days", "days")) |> # Again, make sure to weigh the y-axis
   set_parameters("histogram1", width = 20) # Set histogram binwidth to 20 days
 
 schema |> render()
 ```
 
-From the barplots, we can immediately see an interesting pattern: while the numbers of cases seem to have declined over time, the number of days patients spend in care seem to seem to have stayed fairly constant. This suggest that while fewer patients are being hospitalized, they are spending longer time in care.
+From the barplots, we can immediately see an interesting pattern: while the numbers of cases seem to have declined over time, the number of days patients spend in care seem to seems to have stayed fairly constant. This suggest that while fewer patients are being hospitalized, they are spending longer time in care.
 
-We can indeed confirm this interactively. Try clicking on the bars corresponding to the year 2010 and 2022, in either of the two barplots (feel free to mark either of the bars in red or green by holding the `1` or `2` keys and clicking the bars). It is clearly visible that, compared with 2010, in 2022 there were more patients in long term care, and the relationship between the number of cases and the total number of days was steeper.
+We can indeed confirm this interactively. Try clicking on the bars corresponding to the year 2010 and 2022, in either of the two barplots (feel free to mark either of the bars by holding down the `1` or `2` keys and clicking them). It is clearly visible that, compared to 2010, in 2022 there were more patients in long term care, and the relationship between the number of cases and the number of days in care was steeper.
 
-While the declining number of cases over time might initially appear positive, the constant number days in treatment suggests a more concerning trend. Specifically, given that treatment facility placements are limited, the increasing number of patients staying in care for longer durations may be burdening the healthcare system, reducing its capacity to serve new patients.
+While, on its own, the declining number of cases over time might appear as a positive development, the constant number days in treatment suggests a more worrying trend. Specifically, treatment facility placements are limited resource [@who2022], and the fact that days in treatment have stayed constant while cases have declined may indicate that the healthcare system is becoming burdened by long-term care patients, reducing its capacity to serve new patients.
 
 We can also scrutinize the trend more closely by zooming into the histogram:
 
@@ -131,7 +137,7 @@ We can also scrutinize the trend more closely by zooming into the histogram:
 schema |> 
   assign_cases(which(df$year == 2010), 1) |>
   assign_cases(which(df$year == 2022), 2) |>
-  zoom("histogram1", c(-100, 0, 1500, 2000), units = "data") |>
+  zoom("histogram1", c(-100, 0, 3e03, 1e05), units = "data") |>
   render()
 ```
 
@@ -140,13 +146,15 @@ schema |>
 knitr::opts_chunk$set(eval = TRUE)
 ```
 
-(this can also be done making a selection region by clicking-and-dragging and pressing the `Z` key)
+> You can also zoom into a plot interactively by clicking and dragging to select a rectangular region in the plot and pressing the `Z` key. You can chain multiple zooms to magnify small areas. If you want to undo zooming, press either the `X` key to undo the revert one level of zoom, or `R` to reset the figure to its default state (including zoom level).
 
-#### Child and adolescent rates
+By clicking on the two bars, you should be able to see that, compared with 2010, the distribution of days spent in treatment in 2022 had a fatter tail, suggesting that patients spent longer periods of time in care.
+
+#### Age and child and adolescent mental health
 
 Child and adolescent mental health is a particularly important aspect of the global mental health decline. Childhood mental health disorders are particularly concerning since they can happen during critical developmental periods, leading to life-long consequences [see e.g. @keeley2021]. Furthermore, compared to adults, children have less agency in addressing mental health challenges, relying heavily on primary caregivers and schools.
 
-Thankfully, the overall proportion of children and adolescents in the data set was fairly low, amounting to <9% of all cases and <6% of the total number of days spent in treatment:
+Fortunately, the overall proportion of children and adolescents in the data set was fairly low, amounting to <9% of all cases and <6% of the total number of days spent in treatment:
 
 ```{r}
 aggregate(cbind(cases, days) ~ care_category, sum, data = df) |>
@@ -154,12 +162,14 @@ aggregate(cbind(cases, days) ~ care_category, sum, data = df) |>
   data.frame()
 ```
 
-However, we may be interested in investigating how the proportion of child and adolescent patients has evolved over time. To do this, we can use the following figure:
+However, we may be interested in investigating how these patient counts have evolved over time. To do this, we can make use of the following figure:
 
 ```{r}
 
-layout <- matrix(c( # Create a figure layout with two small plots in the left
-  1, 3,             # column, and one tall plot in the right column
+# Create a figure layout with two small plots in the left
+# column, and one tall plot in the right column
+layout <- matrix(c(
+  1, 3,
   2, 3
 ), nrow = 2, byrow = TRUE)
 
@@ -168,30 +178,94 @@ df |>
   add_barplot(c("year", "cases")) |>
   add_barplot(c("year", "days")) |>
   add_barplot(c("care_category", "cases")) |>
-  set_layout(layout) |>
+  set_layout(layout) |> # Set the layout
   render() 
 ```
 
-To answer the question of how the proportion of child and adolescent patients has evolved over time, we will need to use a bit more complex interactive workflow than we have encountered so far. Specifically:
+To explore how the proportion of child and adolescent patients has evolved over time, we will need to use a slightly more complex interactive workflow than we have used so far. Try taking the following steps:
 
-1. Mark the cases corresponding to children and adolescents by clicking on the corresponding bar in the right barplot, while holding the `1` key
-2. Normalize the two leftmost barplots, corresponding to the number of cases and the total number of days in treatment by year, by clicking on the plots and pressing the `N` key
-3. Zoom into the regions of the two barplots containing the green cases by clicking-and-dragging to select the corresponding region and pressing the `Z` keys.
+> 1. Mark the cases corresponding to children and adolescents by clicking on the corresponding bar in the right barplot, while holding down the `1` key
+2. Normalize the two leftmost barplots, corresponding to the number of cases and the total number of days in treatment by year, by clicking on the plots and pressing the `N` key (you can reverse back to absolute counts by pressing the `N` key again)
+3. Zoom into the regions of the two barplots containing the green cases by clicking-and-dragging to select a rectangular region and pressing the `Z` key.
 
-You should see something similar to this:
+By following these steps, you should end up with a figure similar to the one below:
 
 ```{r}
-#| echo: false
+#| fig-cap: "While the proportion of days spent in treatment by children and adolescent has declined, the proportion of cases that children and adolescents make up has increased."
 df |>
   create_schema() |>
   add_barplot(c("year", "cases")) |>
   add_barplot(c("year", "days")) |>
   add_barplot(c("care_category", "cases")) |>
   assign_cases(which(df$care_category == "child")) |>
-  plotscaper::normalize("barplot1") |>
-  plotscaper::normalize("barplot2") |>
+  normalize("barplot1") |>
+  normalize("barplot2") |>
   zoom("barplot1", c(0, 0, 1, 0.15)) |>
   zoom("barplot2", c(0, 0, 1, 0.15)) |>
   set_layout(layout) |>
   render() 
+```
+
+Interestingly, the two barplots show the opposite trend. While the proportion of the treatment days used by children and adolescents has declined over time, the proportion of total cases they make up has increased. The relative increase in cases appears to be driven by an overall decline in patient numbers: in absolute counts, the number of child and adolescent patients has remained fairly constant between 2010 to 2022, while the total patient count has decreased.
+
+We can also get a more granular breakdown by plotting the age category variable:
+
+```{r}
+df |>
+  create_schema() |>
+  add_barplot(c("age_category", "cases")) |>
+  add_barplot(c("year", "cases")) |>
+  add_barplot(c("age_category", "days")) |>
+  add_barplot(c("year", "days")) |>
+  render()
+```
+
+Again, if we interrogate the figure by employing interactive actions such as selection, zooming, and normalization, we can discover that one age category in which there has been steady growth in both the proportion of cases and days spend in treatment are 70-79 year olds. This aligns with the limited placement availability hypothesis: while these patients account for a relatively small fraction of the total cases, they represent a disproportionately large and increasing proportion of days in treatment. Later, we will also see evidence that many of these patients suffer from neurodegenerative diseases, which require intensive long-term care. It may be the case that, with increasing life-expectancy, the healthcare system is not able to handle the influx of older patients, limiting the availability of placements. 
+
+#### Prevalence of mental disorders
+
+Another important information we can glean from the data set is the prevalence of different mental disorders. The data set identifies the disorders according to ICD-10, an internationally recognized disease classification system published by the World Health organization which organizes various diseases into categories based on aetiology [@icd2024a]. In the data set, the vast majority diagnoses come from the F category, which represents mental and behavioral disorders, although there are also few references to the G category, which represents diseases of the nervous system. Also note that while some levels of the `diagnosis` variable represent a singular ICD-10 diagnosis (e.g. `f10`, `f2`), other represent a range of diagnoses (e.g. `f11-f19`), a union (e.g. `f0 and g30`), or an exclusive difference (e.g. `f4 without f42`).
+
+We can visualize the distribution of the various disorders via the following barplot:
+
+```{r}
+# Create ordering for the bars based on frequency of cases
+order_df <- aggregate(cases ~ diagnosis, sum, data = df)
+order_df <- order_df[order(order_df$cases), ]
+
+df |>
+  create_schema() |>
+  add_barplot(c("diagnosis", "cases")) |>
+  set_scale("barplot1", "x", breaks = order_df$diagnosis) |>
+  render()
+```
+
+> You can also sort the barplot bars interactively by pressing the `O` key. 
+
+We can immediately see that the majority patient load is taken up by the top 5 disorders with > 40,000 cumulative cases each.   
+
+> Press the `Q` key and hover over each of the top 5 bars to see what disorders they represent.
+
+I took the liberty of transcribing the names/classification of the disorders from the [ICD-10 website](https://icd.who.int/browse10/2019/en) [@icd2024a]. Each row of Table [REFERENCE] contains the classification code used in the data, along with the name of the diagnosis/es according to ICD-10. I've also added some notes in the parentheses:
+
+```{r}
+#| echo: false
+#| eval: true
+icd10 <- read.csv("./data/longterm_care_icd10.csv", header = FALSE)
+
+kableExtra::kbl(icd10,
+                col.names = c("Code", "Description"),
+                caption = "ICD-10 mental disorder codes") |> 
+  kableExtra::kable_styling(full_width = FALSE)
+```
+
+Thus, the most mental disorders were those caused by the use of alcohol, followed by dementias caused by Alzheimer's and other diseases, followed by amnesia (not caused psychoactive substances), and, finally, disorders caused by non-alcohol psychoactive substances. The amnesia diagnosis is quite interesting, becuase it explicitly rules out obsessive-compulsive disorder (OCD; f42). While the connection between OCD and amnesia might not be immediately clear (at least to a layman such as myself), there is evidence that people with OCD tend to obsess over not remembering certain events and have less confidence in recollecting things from the past [see e.g. @muller2005]. For instance, a person with OCD may have anxiety over whether or not they locked the doors to their house or turned off the stove. Thus it makes sense to explicitly rule out this diagnosis.     
+
+```{r}
+df |>
+  create_schema() |>
+  add_barplot(c("diagnosis", "cases")) |>
+  add_barplot(c("age_category", "cases")) |>
+  set_scale("barplot1", "x", breaks = order_df$diagnosis) |>
+  render()
 ```
